; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_udbg_16550.c_udbg_uart_flush.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_udbg_16550.c_udbg_uart_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UART_LSR = common dso_local global i32 0, align 4
@LSR_THRE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @udbg_uart_flush to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @udbg_uart_flush() #0 {
  br label %1

1:                                                ; preds = %7, %0
  %2 = load i32, i32* @UART_LSR, align 4
  %3 = call i32 @udbg_uart_in(i32 %2)
  %4 = load i32, i32* @LSR_THRE, align 4
  %5 = and i32 %3, %4
  %6 = icmp eq i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = call i32 (...) @cpu_relax()
  br label %1

9:                                                ; preds = %1
  ret void
}

declare dso_local i32 @udbg_uart_in(i32) #1

declare dso_local i32 @cpu_relax(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
